# byspam

./: Changelog  ENVIRONMENT  INSTALL  LICENSE  README  README.md  VERSION  byspam.spec  configure  configure.ac  install-sh  install.in  uninstall.in  upgrade
etc/: byspam.conf  byspam.conf.ko  byspam.cron  filter.rc
filter/: filter-allow  filter-body  filter-date  filter-extra  filter-from  filter-ignore  filter-subject  filter-to
include/: Common.pm  Encode.pm  Getopt.pm  Init.pm  Mail.pm  Parse.pm  Trash.pm  byspamFunction.pl
tags/0.2.0/: install.in
tags/0.2.1/: uninstall.in
tags/0.2.2/: LICENSE
tags/0.2.2/etc/: byspam.conf
tags/0.2.2/filter/: filter-allow
tags/0.2.3/: Changelog
tags/0.2.3/filter/: filter-extra
tags/0.2.4/: uninstall.in
tags/0.2.5/filter/: filter-subject
tags/1.0.0/: Changelog  Makefile.in  configure
tags/1.0.0/etc/: byspam.conf
tags/1.0.0/include/: Init.pm
tags/1.0.1/: VERSION  autogen
tags/1.0.1/etc/: byspam.conf.ko
tags/1.0.1/filter/: filter-from
tags/1.0.1/include/: Encode.pm  Parse.pm
tags/1.0.2/: README
tags/1.0.2/filter/: filter-subject
tags/1.0.3/: ENVIRONMENT  INSTALL  Makefile.in  REGEX  TODO  VERSION  byspam.spec  configure  install-sh
tags/1.0.3/etc/: byspamcron.sysconfig  filter.rc
tags/1.0.3/filter/: filter-allow  filter-date  filter-ignore  filter-to
tags/1.0.3/include/: Common.pm  Encode.pm
tags/start/: ENVIRONMENT  install.in  upgrade
tags/v0_2_0/: INSTALL  uninstall.in
tags/v0_2_1/: Changelog
tags/v0_2_2/: Changelog  configure
tags/v0_2_3/: VERSION
tags/v0_2_5/: byspam.spec
tags/v1_0_0/: REGEX
tags/v1_0_1/: Changelog  INSTALL  Makefile.in
tags/v1_0_2/: configure.ac
trunk/: Changelog  ENVIRONMENT  INSTALL  Makefile.in  README  TODO  VERSION  byspam.spec  configure  configure.ac  install.in  uninstall.in  upgrade
trunk/etc/: byspam.conf  byspam.conf.ko  filter.rc
trunk/filter/: filter-allow  filter-body  filter-date  filter-extra  filter-from  filter-ignore  filter-subject  filter-to
trunk/include/: Common.pm  Encode.pm  Getopt.pm  Init.pm  Mail.pm  Parse.pm  Trash.pm  byspamFunction.pl
(+23 files in other folders)
